# binance_jsonrpc

./: .env  Cargo.toml  README.md  configuration.yaml
docs/: task.md
migrations/: 20221219114252_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  server.rs  startup.rs
src/binance/: api.rs
src/binance/api/: create_request.rs  delete_request.rs  error.rs  get_order.rs  get_request.rs  model.rs  secret_key.rs  ticker.rs  ticker_request.rs  types.rs  utils.rs
src/binance/client/: binance_client.rs  mod.rs
src/methods/: create_order.rs  delete_order.rs  get_order.rs  health_check.rs  mod.rs
src/utils/: configuration.rs  db.rs  errors.rs  mod.rs  telegram.rs
tests/api/: health_check.rs  helpers.rs  integration.rs  main.rs  types.rs
