[package]
name = "binance_jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
config = "0.11"
chrono = "0.4.15"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
jsonrpc-v2 = "0.11.0"
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.11.0"
serde_qs = "0.9.2"
sha2 = "0.9.8"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"
reqwest = { version = "0.11", features = ["json"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
tokio-tungstenite = {version = "0.18.0", features = ["connect", "native-tls"]}
url = "2.1.0"
uuid = "1.2.2"
erased-serde = "0.3.24"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros"] }

[dev-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "bigdecimal"
]
